ny annotering for flere issuers