@@ -1,15 +1,7 @@
 package no.nav.security.token.support.core.validation;
 
-import no.nav.security.token.support.core.api.Protected;
-import no.nav.security.token.support.core.api.ProtectedWithClaims;
-import no.nav.security.token.support.core.api.Unprotected;
-import no.nav.security.token.support.core.context.TokenValidationContextHolder;
-import no.nav.security.token.support.core.exceptions.AnnotationRequiredException;
-import no.nav.security.token.support.core.exceptions.JwtTokenInvalidClaimException;
-import no.nav.security.token.support.core.exceptions.JwtTokenMissingException;
-import no.nav.security.token.support.core.jwt.JwtToken;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import static no.nav.security.token.support.core.utils.JwtTokenUtil.contextHasValidToken;
+import static no.nav.security.token.support.core.utils.JwtTokenUtil.getJwtToken;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
@@ -19,8 +11,18 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static no.nav.security.token.support.core.utils.JwtTokenUtil.contextHasValidToken;
-import static no.nav.security.token.support.core.utils.JwtTokenUtil.getJwtToken;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import no.nav.security.token.support.core.api.Protected;
+import no.nav.security.token.support.core.api.ProtectedWithClaims;
+import no.nav.security.token.support.core.api.Protection;
+import no.nav.security.token.support.core.api.Unprotected;
+import no.nav.security.token.support.core.context.TokenValidationContextHolder;
+import no.nav.security.token.support.core.exceptions.AnnotationRequiredException;
+import no.nav.security.token.support.core.exceptions.JwtTokenInvalidClaimException;
+import no.nav.security.token.support.core.exceptions.JwtTokenMissingException;
+import no.nav.security.token.support.core.jwt.JwtToken;
 
 public class JwtTokenAnnotationHandler {
 
@@ -32,11 +34,12 @@ public class JwtTokenAnnotationHandler {
     }
 
     public boolean assertValidAnnotation(Method method) throws AnnotationRequiredException {
-        Annotation annotation = getAnnotation(method, Arrays.asList(ProtectedWithClaims.class, Protected.class, Unprotected.class));
+        Annotation annotation = getAnnotation(method,
+                List.of(Protection.class, ProtectedWithClaims.class, Protected.class, Unprotected.class));
         if (annotation == null) {
             throw new AnnotationRequiredException("Server misconfigured - controller/method ["
-                + method.getClass().getName() + "." + method.getName()
-                + "] not annotated @Unprotected, @Protected or added to ignore list");
+                    + method.getClass().getName() + "." + method.getName()
+                    + "] not annotated @Unprotected, @Protected or added to ignore list");
         }
         return assertValidAnnotation(annotation);
     }
@@ -45,21 +48,57 @@ public class JwtTokenAnnotationHandler {
         if (annotation instanceof Unprotected) {
             log.debug("annotation is of type={}, no token validation performed.", Unprotected.class.getSimpleName());
             return true;
-        } else if (annotation instanceof ProtectedWithClaims) {
+        }
+        if (annotation instanceof Protection) {
+            boolean hasToken = false;
+            var ann = Protection.class.cast(annotation);
+            for (var sub : ann.value()) {
+                var jwtToken = getJwtToken(sub.issuer(), tokenValidationContextHolder);
+                if (jwtToken.isEmpty()) {
+                    continue;
+                }
+                hasToken = true;
+                if (handleProtectedWithClaimsAnnotation(sub, jwtToken.get())) {
+                    return true;
+                }
+            }
+            if (!hasToken) {
+                throw new JwtTokenMissingException("no valid token found in validation context for any of the issuers " + issuers(ann));
+            }
+            throw new JwtTokenInvalidClaimException("required claims not present in token for any of " + issuersAndClaims(ann));
+        }
+        if (annotation instanceof ProtectedWithClaims) {
             log.debug("annotation is of type={}, do token validation and claim checking.", ProtectedWithClaims.class.getSimpleName());
-            return handleProtectedWithClaimsAnnotation((ProtectedWithClaims) annotation);
-        } else if (annotation instanceof Protected) {
-            log.debug("annotation is of type={}, check if context has valid token.", Protected.class.getSimpleName());
-            if (contextHasValidToken(tokenValidationContextHolder)){
-                return true;
-            } else {
+            var ann = ProtectedWithClaims.class.cast(annotation);
+            var jwtToken = getJwtToken(ann.issuer(), tokenValidationContextHolder);
+            if (jwtToken.isEmpty()) {
                 throw new JwtTokenMissingException("no valid token found in validation context");
             }
-
-        } else {
-            log.debug("annotation is unknown,  type={}, no token validation performed. but possible bug so throw exception", annotation.annotationType());
-            return false;
+            if (!handleProtectedWithClaimsAnnotation(ann, jwtToken.get())) {
+                throw new JwtTokenInvalidClaimException("required claims not present in token." + Arrays.asList(ann.claimMap()));
+            }
+            return true;
         }
+        if (annotation instanceof Protected) {
+            log.debug("annotation is of type={}, check if context has valid token.", Protected.class.getSimpleName());
+            if (contextHasValidToken(tokenValidationContextHolder)) {
+                return true;
+            }
+            throw new JwtTokenMissingException("no valid token found in validation context");
+
+        }
+        log.debug("annotation is unknown,  type={}, no token validation performed. but possible bug so throw exception", annotation.annotationType());
+        return false;
+
+    }
+
+    private static Map<String, String[]> issuersAndClaims(Protection ann) {
+        return Arrays.stream(ann.value())
+                .collect(Collectors.toMap(ProtectedWithClaims::issuer, ProtectedWithClaims::claimMap));
+    }
+
+    private static List<String> issuers(Protection ann) {
+        return Arrays.stream(ann.value()).map(ProtectedWithClaims::issuer).collect(Collectors.toList());
     }
 
     protected Annotation getAnnotation(Method method, List<Class<? extends Annotation>> types) {
@@ -77,25 +116,21 @@ public class JwtTokenAnnotationHandler {
         return null;
     }
 
-    private static Annotation findAnnotation(Annotation[] annotations, List<Class<? extends Annotation>> types){
-        return annotations != null ?
-            Arrays.stream(annotations)
+    private static Annotation findAnnotation(Annotation[] annotations, List<Class<? extends Annotation>> types) {
+        return annotations != null ? Arrays.stream(annotations)
                 .filter(a -> types.contains(a.annotationType()))
                 .findFirst()
                 .orElse(null) : null;
     }
 
-    protected boolean handleProtectedWithClaimsAnnotation(ProtectedWithClaims annotation) {
-        return handleProtectedWithClaims(annotation.issuer(), annotation.claimMap(), annotation.combineWithOr());
+    protected boolean handleProtectedWithClaimsAnnotation(ProtectedWithClaims annotation, JwtToken jwtToken) {
+        return handleProtectedWithClaims(annotation.issuer(), annotation.claimMap(), annotation.combineWithOr(), jwtToken);
     }
 
-    protected boolean handleProtectedWithClaims(String issuer, String[] requiredClaims, boolean combineWithOr) {
+    protected boolean handleProtectedWithClaims(String issuer, String[] requiredClaims, boolean combineWithOr, JwtToken jwtToken) {
         if (Objects.nonNull(issuer) && issuer.length() > 0) {
-
-            JwtToken jwtToken = getJwtToken(issuer, tokenValidationContextHolder)
-                .orElseThrow(() -> new JwtTokenMissingException("no valid token found in validation context"));
             if (!containsRequiredClaims(jwtToken, combineWithOr, requiredClaims)) {
-                throw new JwtTokenInvalidClaimException("required claims not present in token." + Arrays.asList(requiredClaims));
+                return false;
             }
         }
         return true;
@@ -104,15 +139,15 @@ public class JwtTokenAnnotationHandler {
     protected boolean containsRequiredClaims(JwtToken jwtBearerToken, boolean combineWithOr, String... claims) {
         log.debug("choose matching logic based on combineWithOr=" + combineWithOr);
         return combineWithOr ? containsAnyClaim(jwtBearerToken, claims)
-            : containsAllClaims(jwtBearerToken, claims);
+                : containsAllClaims(jwtBearerToken, claims);
     }
 
     private boolean containsAllClaims(JwtToken jwtToken, String... claims) {
         if (claims != null && claims.length > 0) {
             return Arrays.stream(claims)
-                .map(claimUnparsed -> claimUnparsed.split("="))
-                .filter(pair -> pair.length == 2)
-                .allMatch(pair -> jwtToken.containsClaim(pair[0].trim(), pair[1].trim()));
+                    .map(claimUnparsed -> claimUnparsed.split("="))
+                    .filter(pair -> pair.length == 2)
+                    .allMatch(pair -> jwtToken.containsClaim(pair[0].trim(), pair[1].trim()));
         }
         return true;
     }
@@ -120,9 +155,9 @@ public class JwtTokenAnnotationHandler {
     private boolean containsAnyClaim(JwtToken jwtToken, String... claims) {
         if (claims != null && claims.length > 0) {
             return Arrays.stream(claims)
-                .map(claimUnparsed -> claimUnparsed.split("="))
-                .filter(pair -> pair.length == 2)
-                .anyMatch(pair -> jwtToken.containsClaim(pair[0].trim(), pair[1].trim()));
+                    .map(claimUnparsed -> claimUnparsed.split("="))
+                    .filter(pair -> pair.length == 2)
+                    .anyMatch(pair -> jwtToken.containsClaim(pair[0].trim(), pair[1].trim()));
         }
         log.debug("no claims listed, so claim checking is ok.");
         return true;
